--- a/carte.html
+++ b/carte.html
@@ -221,8 +221,8 @@
             Contact : +229 01 43 75 65 31
         </div>
         
-        <!-- <button class="download-btn">Télécharger en PNG</button> -->
-        <button class="contacter"><a href="wa.me/+2290153007134">CLIQUEZ ICI POUR COMMANDER UN SITE WEB / AFFICHE / CARTE</a></button>
+        <button class="download-btn">Télécharger en PNG</button>
+        <button class="contacter"><a href="https://wa.me/+2290153007134">CLIQUEZ ICI POUR COMMANDER UN SITE WEB / AFFICHE / CARTE</a></button>
     </div>
     
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
