--- a/carte.html
+++ b/carte.html
@@ -266,8 +266,8 @@
         
         <div class="details">
             Vendredi 8 août 2025 · 14h<br>
-            Salle La Lucide, Godomey<br>
-            (face à St Daniel)
+            Salle des fêtes La Lucide, Godomey<br>
+            (face à la Boulangerie St Daniel)
         </div>
         
         <div class="note">
