--- a/essai.html
+++ b/essai.html
@@ -49,29 +49,26 @@
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                  1. Gbigbo wiwé jijohono;
-                  Jete do sensen miton;
-                  Hie we Aholu Donano;
-                  Miwule to nukun We.
+                  1. Gbigbo wiwé jijohono; Jete do sensen miton <br>      
+                  Hie we Aholu Donano; Miwule to nukun We.             
                 </h1>
             </div>
         </section>
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                  2. Jiwheyewhe Medato m'ton;
-                  Ahol' yeyino hugan;
-                  Huhlon wiwé jale jete;
-                  Miwule to nukun do we.
+                  2. Gbigbo wiwé jijohono; Jete do sensen miton <br>      
+                  Hie we Aholu Donano; Miwule to nukun We. <br>
+                  Hie we Aholu Donano; Miwule to nukun We.
                 </h1>
             </div>
         </section>
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                 3. To leblanno jale jete;
-                  Hun nukun t'we leblan 'ton;
-                  Miw' madoganno le pinpon we;
+                 3. To leblanno jale jete; <br>
+                  Hun nukun t'we leblan 'ton;<br>
+                  Miw' madoganno le pinpon we;<br>
                   Hun leblanhon na mi.
                 </h1>
             </div>
@@ -79,41 +76,49 @@
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                 4. Jiwheyewhe OSHOFFA ton;
-                Jiyewhe Elijah ton;
-                Hi'wè do Mose to zungbo me;
-                Jale jete wa do mi.
+                 4. Jiwheyewhe OSHOFFA ton; <br>
+                Jiyewhe Elijah ton;<br>
+                Hi'wè do Mose to zungbo me;<br>
+                Jale jete wa do mi.<br> 
+                  Jale jete wa do mi.
                 </h1>
             </div>
         </section>
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                 5. Oto gbèno' To Leblano;
-                  Ta hinhon t'wé do mi mẹ;
-                  Oto hinhon madopodong;
-                  Miwule to té pon wé.
-                </h1>
-            </div>
-        </section>
-        <section style="margin-top: 2%;">
-            <div class="container" style="margin-top: 2%; font-weight: 900;">
-                <h1>            
-                  6. Jiyewhe Ablaham, Issac;
-                  Jacob' p'OSHOFFA po ton;
+                 5. Oto gbèno' To Leblano;<br>
+                  Ta hinhon t'wé do mi mẹ;<br>
+                  Oto hinhon madopodong;<br>
+                  Miwule to té pon wé.<br>
+                  Jacob' p'OSHOFFA po ton; <br>
                   He s'avigbé Elisabeth ton;
-                  Wensino le te pon we.
                 </h1>
             </div>
         </section>
         <section style="margin-top: 2%;">
             <div class="container" style="margin-top: 2%; font-weight: 900;">
                 <h1>            
-                  7. Gbigbo wiwé apoe 'lon ton;
-                  Lidohiameto nugbo;
-                  Mi zé 'gbé m'ton le d'aga hlan we;
+                  6. Jiyewhe Ablaham, Issac;<br>
+                  Jacob' p'OSHOFFA po ton;<br>
+                  He s'avigbé Elisabeth ton;<br>
+                  Wensino le te pon we.<br>
+                  Miwule to té pon wé.<br>
+                  Jacob' p'OSHOFFA po ton; <br>
+                  He s'avigbé Elisabeth ton;
+                </h1>
+            </div>
+        </section>
+        <section style="margin-top: 2%;">
+            <div class="container" style="margin-top: 2%; font-weight: 900;">
+                <h1>            
+                  7. Gbigbo wiwé apoe 'lon ton; <br>
+                  Lidohiameto nugbo;<br>
+                  Mi zé 'gbé m'ton le d'aga hlan we;<br>
+                  Wensino le te pon we.<br>
+                  Miwule to té pon wé.<br>
+                  Jacob' p'OSHOFFA po ton; <br> 
                   Jomion T'wé n'kon do mi ji.<br>
-
                     (Nişe)
                 </h1>
             </div>
