Add additional lines of text to essai.html

--- a/essai.html
+++ b/essai.html
@@ -119,6 +119,13 @@
                   Miwule to té pon wé.<br>
                   Jacob' p'OSHOFFA po ton; <br> 
                   Jomion T'wé n'kon do mi ji.<br>
+                  Gbigbo wiwé apoe 'lon ton; <br>
+                  Lidohiameto nugbo;<br>
+                  Mi zé 'gbé m'ton le d'aga hlan we;<br>
+                  Wensino le te pon we.<br>
+                  Miwule to té pon wé.<br>
+                  Jacob' p'OSHOFFA po ton; <br> 
+                  Jomion T'wé n'kon do mi ji. <br>
                     (Nişe)
                 </h1>
             </div>
